[package]
name = "tinted_egui_nodes"
version = "0.1.0"
authors = ["Theo Paris <theo@tinted.dev>", "Cameron Haigh <cgwhaigh@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Egui port of https://github.com/Nelarius/imnodes"

[lib]
name = "egui_nodes"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.29.0"
derivative = "2.2.0"

[dev-dependencies]
eframe = "0.29.0"
