[package]
name = "tinted_egui_nodes"
version = "0.1.2"
authors = ["Theo Paris <theo@tinted.dev>", "Cameron Haigh <cgwhaigh@gmail.com>"]
edition = "2024"
license = "MIT"
description = "A Egui port of https://github.com/Nelarius/imnodes"

[lib]
name = "egui_nodes"
path = "src/lib.rs"

[dependencies]
egui = "0.33.3"
derivative = "2.2.0"

[dev-dependencies]
eframe = "0.33.3"
